# KVForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: end_to_end.py  plot_roofline.py  run_all.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  DESIGN_DECISIONS.md
examples/: end_to_end_inference.py  optimize_a_kernel.py  profile_a_model.py
kvforge/: __init__.py  hardware.py  optimize.py  profile.py
kvforge/bench/: __init__.py  __main__.py  cli.py  harness.py
kvforge/kernels/: __init__.py  rmsnorm.py  rope.py  softmax.py
kvforge/models/: __init__.py  tinyllama.py
kvforge/optimizer/: __init__.py  cli.py  harness.py  roofline.py  search.py
kvforge/profiler/: __init__.py  amdahl.py  classify.py  cli.py  profile.py
tests/: conftest.py  test_amdahl.py  test_classify.py  test_harness.py  test_kernels.py  test_roofline.py
